src/components/Cards/styles.scss
$orange: #FFBD52;
$blue: #54B9D3;

.message {
    margin-top: 30px;
    text-align: center;
    font-size: 24px;
    color: black;
}

.reset {
    display: flex; 
    margin: 10px auto;
    border: 0.3rem solid white;
    border-radius:0.5rem;
    background: #54B9D3;
    font-size: 16px;
    color: white;
    font-family: Assistant;
    padding: 0.3rem;
    cursor: pointer;
    z-index: 1;
    transition: all 0.05s ease-in-out;
    &:hover, &:focus {
      opacity: 0.8;
    }
}

.cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    height: calc(100vh - 192px);
    width: 100%;
    margin: 50px auto;
    padding: 0 20px;
    max-width: 960px;
    perspective: 1000px;
}

.card {
    width: calc(33.333% - 10px);
    height: calc(10% - 10px);
    border: 6px solid white;
    border-radius: 10px;
    margin: 5px;
    position: relative;
    transform: scale(1);
    background: rgba(255, 189, 82, 0.5);
    transform-style: preserve-3d;
    transition: transform .5s;
    background-repeat: no-repeat;
    cursor: pointer;
}

.unrevealed {
    transform: rotateY(0deg);
    background-image: url("/images/chickAndHen.svg") !important;
}

.revealed, .matched {
    transform: rotateY(180deg);
}

.matched {
    background-color: rgba(84, 185, 211, 0.3);
}

@media only screen and (min-width: 500px) {
    .card {
        width: calc(25% - 10px);
        height: calc(12.5% - 10px);
    }
    .front, .back{ 
        padding: 5px;
    }
}

@media only screen and (min-width: 620px) {
    .card {
        width: calc(20% - 10px);
        height: calc(16.666% - 10px);
    }
    .front, .back{ 
        padding: 7px;
    }
}

@media only screen and (min-width: 750px) {
    .card {
        width: calc(16.666% - 20px);
        height: calc(20% - 20px);
        margin: 10px;
    }
    .reset {
        padding: 0.5rem;
    }
}

